[tool.poetry]
name          = "octoapi"
version       = "0.2.0"
description   = "Python interface to Octopus Energy API"
authors       = ["James Robinson <james.em.robinson@gmail.com>"]
maintainers   = ["James Robinson <james.em.robinson@gmail.com>"]
license       = "GPLv3"
readme        = "README.md"
homepage      = ""
repository    = "https://github.com/jemrobinson/octoapi"
documentation = ""
keywords      = [
    "Electricity"
]

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8.1"
pytz = ">=2020.4,<2023.0"
requests = "^2.25.1"
Sphinx = ">=3.5.4,<5.0.0"

[tool.poetry.dev-dependencies]
black  = "^20.8b1"
coverage = "^6.2"
coveralls = "^3.3.1"
flake8 = "^4.0.1"
pathlib = "^1.0.1"
pylint = "^2.12.0"
pytest = "^7.0.1"
toml = "^0.10.2"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
